--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <h1>G3 Architect</h1>
+            <h3 class="nav-title">G3 Architect</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -19,6 +19,18 @@
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group Of Architects</h1>
+                <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusamus
+                    praesentium maxime eos modi sit unde quisquam molestias veniam omnis? Eius magni harum non
+                    recusandae
+                    perspiciatis fugit maxime fuga quae.</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+
+        </div>
     </header>
     <main>
 
