--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- header start -->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architect</h3>
@@ -32,9 +33,34 @@
 
         </div>
     </header>
-    <main>
+    <!-- header ends -->
 
+    <!-- team feature section start -->
+    <main>
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="quick-list">Quick List</span> <span> Of Our</span><span
+                        class="text-fearute">
+                        Features</span></h3>
+                <p class="teams-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati,
+                    tenetur.
+                    At doloremque commodi
+                    porro, illo totam ex placeat nam! Libero, consequuntur quaerat? Nesciunt maxime repellendus tempora
+                    corrupti rem officiis. Placeat.</p>
+                <button class="btn-primary">Explore More</button>
+
+            </div>
+        </section>
     </main>
+
+
+
     <footer>
 
     </footer>
