finished team section responsive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group Of Architects</h1>
-                <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusamus
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusamus
                     praesentium maxime eos modi sit unde quisquam molestias veniam omnis? Eius magni harum non
                     recusandae
                     perspiciatis fugit maxime fuga quae.</p>
@@ -45,10 +45,10 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="teams-content">
-                <h3 class="teams-title"><span class="quick-list">Quick List</span> <span> Of Our</span><span
-                        class="text-fearute">
+                <h3 class="teams-title"><span class="quick-list text-light-gray">Quick List</span> <span> Of
+                        Our</span><span class="text-fearute">
                         Features</span></h3>
-                <p class="teams-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati,
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati,
                     tenetur.
                     At doloremque commodi
                     porro, illo totam ex placeat nam! Libero, consequuntur quaerat? Nesciunt maxime repellendus tempora
