started fact section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- header start -->
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architect</h3>
+            <h3 class="section-title">G3 Architect</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -35,8 +35,9 @@
     </header>
     <!-- header ends -->
 
-    <!-- team feature section start -->
+
     <main>
+        <!-- team section start -->
         <section class="teams-container">
             <div class="teams-img-container">
                 <img src="images/team1.png" alt="">
@@ -56,6 +57,17 @@
                 <button class="btn-primary">Explore More</button>
 
             </div>
+        </section>
+
+        <!-- features section -->
+        <section class="features"></section>
+
+        <!-- facts section -->
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque quod nihil sint
+                officia possimus. Unde
+                ipsa laboriosam mollitia </p>
         </section>
     </main>
 
