--- a/index.html
+++ b/index.html
@@ -64,10 +64,40 @@
 
         <!-- facts section -->
         <section class="facts">
+
             <h3 class="section-title">Some Facts</h3>
             <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque quod nihil sint
                 officia possimus. Unde
                 ipsa laboriosam mollitia </p>
+
+            <div class="facts-card-container">
+                <!-- .card*4>img+h2.card-stats+p.card-title -->
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title text-light-gray">Award Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title text-light-gray">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title text-light-gray">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title text-light-gray">Email Send</p>
+                </div>
+
+
+
+            </div>
+
+
         </section>
     </main>
 
