added the sponsors section

--- a/index.html
+++ b/index.html
@@ -92,13 +92,27 @@
                     <h2 class="card-stats">22578</h2>
                     <p class="card-title text-light-gray">Email Send</p>
                 </div>
-
-
-
             </div>
-
-
         </section>
+
+        <!-- sponsor section -->
+        <section class="sponsors">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="text-light-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat ut qui enim
+                illum, neque sed nam
+                maiores? Nobis nisi voluptate quos necessitatibus esse, </p>
+
+
+            <div class="sponsors-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+
+
     </main>
 
 
