feature part done

--- a/index.html
+++ b/index.html
@@ -60,7 +60,53 @@
         </section>
 
         <!-- features section -->
-        <section class="features"></section>
+        <section class="features">
+            <div class="feature-content">
+                <h3 class="section-title">Features You Will<br> Love And Enjoy</h3>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+                    quilhan kajak kaih tfxhsblsjh kjiuhgpug jhs
+                    distinctio </p>
+
+                <div class="card">
+                    <h4>Display and Mobile Version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nobis laboriosam ea alias, nulla
+                        sed in ad voluptas sequi Magni nisi vero autem atque!
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Display and Mobile Version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nobis laboriosam ea alias, nulla
+                        sed in ad voluptas sequi Magni nisi vero autem atque!
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Display and Mobile Version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nobis laboriosam ea alias, nulla
+                        sed in ad voluptas sequi Magni nisi vero autem atque!
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Display and Mobile Version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nobis laboriosam ea alias, nulla
+                        sed in ad voluptas sequi Magni nisi vero autem atque!
+                    </p>
+                </div>
+
+            </div>
+            <div class="feature-img">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>10+ years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
+
+
+        </section>
 
         <!-- facts section -->
         <section class="facts">
